deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app-service-v0
  namespace: example-namespace
spec:
  selector:
    matchLabels:
      app: example-app-service-v0
  template:
    metadata:
      labels:
        app: example-app-service-v0
    spec:
      containers:
      - name: example-app-service-v0
        image: exampleDockerHubUser/example-app-service-nginx-v0:0.1.0
        ports:
        - containerPort: 80 
            
---
apiVersion: v1
kind: Service
metadata:
  name: example-app-service-v0
  namespace: example-namespace
spec:
  selector:
    app: example-app-service-v0
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 80
