ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app-service-v0-ingress
  namespace: example-namespace
spec:
  ingressClassName: nginx
  rules:
  - host: example.co.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: example-app-service-v0
            port:
              number: 5000
